# NL2SQL-using-LLM-RAG

./: .env.example  .gitignore
backend/: app.py  config.py  main.py  pyproject.toml  requirements.txt
backend/data/sample/: customers.csv  employees.csv  orders.csv  products.csv  sample_data.xlsx
backend/logger/: __init__.py  config.py  logger_config.py
backend/scripts/: create_sample_data.py
backend/services/: data_loader.py  db_connector.py  groq_llm_client.py  hf_api_client.py  hf_llm_client.py  openai_client.py  rag_engine.py  sql_generator.py  sql_validator.py  utils.py
backend/tests/: test_ai.py  test_database.py  test_endpoints.py  test_setup.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  ResultView.js
frontend/src/components/: ChatBox.js  DBSettingsPanel.js  EmptyState.js  ExplainTab.js  HighlightedSQL.js  HistoryTab.js  QueryCostBanner.js  ResultView.js  SchemaPanel.js
frontend/src/utils/: schemaUtils.js  sqlUtils.js
